# fractals

./: README.md  asset-manifest.json  index.html  package-lock.json  package.json
public/: index.html
src/: App.css  App.tsx  Settings.ts
src/components/: Menu.tsx  Viewport.tsx
static/css/: main.495067e8.css  main.495067e8.css.map  main.5de9913f.css  main.5de9913f.css.map
static/js/: main.16fef7f0.js  main.16fef7f0.js.map  main.72b1851d.js  main.72b1851d.js.map  main.75e7c4b4.js  main.75e7c4b4.js.map  main.cdb18d02.js  main.cdb18d02.js.map  main.eeb102bc.js  main.eeb102bc.js.map  main.f79d9582.js  main.f79d9582.js.map
static/media/: wasm_bg.ab48b23c3a4dd58cac7e.wasm  wasm_bg.ba3bd9e075c3b84ea285.wasm  wasm_bg.c9b9a733da335e5d874d.wasm
wasm/: Cargo.toml
wasm/src/: lib.rs
