[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
xorshift = "0.1"
wasm-bindgen = "0.2.84"
wgpu = "0.15.1"
image = "0.24.5"
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
web-sys = {version = "0.3.55", features=[
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "ImageData",
    "Response",
    "Window"
]}